# matrix_multiplication

./: CMakeLists.txt  README.md  analysis.ipynb  benchmark_results.csv  manual_build_test
.cache/clangd/index/: Algorithms.cpp.F95B868A5CE9CA7C.idx  Algorithms.h.CE38A662D5E8DB47.idx  Matrix.cpp.6666CE6A534B34EF.idx  Matrix.h.030DC34BBB746A7B.idx  Operations.h.301870D2A3C33575.idx  main.cpp.7BD15144371E471F.idx
include/: Algorithms.h  Matrix.h  Operations.h
src/: Algorithms.cpp  Matrix.cpp  main.cpp
